# CodeTemplate

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: CD.yml  CI.yml
cmake/: CodeTemplateConfig.cmake.in
include/code_template/: print_log.h
src/code_template/: CMakeLists.txt  print_log.cpp
tests/: CMakeLists.txt  test_hello.cpp
